syntax = "proto3";

package users;

option go_package = "/proto";

message User {
  int32 id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string password_hash = 5;
  string owned_car = 6;
  string rented_car = 7;
}

service UserService {
  rpc RegisterUser(RegisterRequest) returns (RegisterResponse) {}
  rpc LoginUser(LoginRequest) returns (LoginResponse) {}
  rpc ValidateEmail(EmailValidationRequest) returns (EmailValidationResponse) {}
  rpc GetUserProfile(UserProfileRequest) returns (UserProfileResponse) {}
}

message UserDTO {
  int32 userid = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string owned_car = 5;
  string rented_car = 6;
}

message UserProfileRequest{
  int32 user_id = 1;
}

message UserProfileResponse {
  int32 user_id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
}

message RegisterRequest {
  int32 id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string password = 5;
}

message RegisterResponse {
  int32 user_id = 1;
}

message LoginRequest {
  int32 id = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  int32 user_id = 1;
}

message EmailValidationRequest {
  string email = 1;
}

message EmailValidationResponse {
  bool valid = 1;
}